--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="nome_app">GPA-Projetos 1.0(beta)</string>
+    <string name="nome_app">Project Manager 1.0(beta)</string>
     <string name="versao">1.0 (beta)</string>
 
 </resources>
